--- a/src/main/c/static/Makefile
+++ b/src/main/c/static/Makefile
@@ -1,3 +1,22 @@
+ifeq ($(RVV),0)
+	CC = gcc
+	CXX= g++
+else ifeq ($(RVV),1) # scalar implementation compiled with riscv
+	CC = $(RISCV)/bin/clang
+	CXX= $(RISCV)/bin/clang++
+	ARCH = --gcc-toolchain=$(RISCV) --target=riscv64 -menable-experimental-extensions -march=rv64imv0p10 -mabi=lp64
+else ifeq ($(RVV),2)
+	CC = riscv64-unknown-elf-gcc
+	CXX= riscv64-unknown-elf-g++
+	CPPFLAGS += -D RVV
+	ARCH = -march=rv64imv -mabi=lp64
+else
+	CC = $(RISCV)/bin/clang
+	CXX= $(RISCV)/bin/clang++
+	CPPFLAGS += -D RVV
+	ARCH = --gcc-toolchain=$(RISCV) --target=riscv64 -menable-experimental-extensions -march=rv64imv0p10 -mabi=lp64
+endif
+
 SRC_SRCS = $(shell ls ../*.c) $(shell ls *.c)
 SRC_OBJS = $(SRC_SRCS:.c=.o)
 
@@ -8,28 +27,23 @@ OBJS = $(SRC_OBJS) $(TEST_OBJS)
 
 INCLUDE = -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux -I..
 
-CFLAGS = -static -g -Wall -fPIC $(INCLUDE) -std=c11
+CFLAGS = -static -g $(OPT) -Wall -fPIC $(INCLUDE) -std=c11 $(ARCH)
 
 TARGET = riscv_table_reader
 
-default : CC=${RISCV}/bin/riscv64-unknown-elf-gcc
-default : CFLAGS+= -march=rv64im -mabi=lp64
-default : OPT = -O2
-default : ${TARGET}
+all : OPT ?= -O2
+all : ARCH ?= -march=core2
+all : ${TARGET}
 
-release : OPT = -O3
-release : CFLAGS += -D NDEBUG
-release : ${TARGET}
-
-debug : OPT = -O0
+debug : OPT = -Og
+debug : ARCH ?= -march=core2
 debug : CFLAGS+= -D DEBUG
 debug : ${TARGET}
 
-riscv : CC=${RISCV}/bin/clang
-riscv : CFLAGS+=--gcc-toolchain=${RISCV} --target=riscv64 -march=rv64im -mabi=lp64
-riscv : $(TARGET)
-
-CFLAGS += $(OPT)
+release : OPT = -O3
+release : ARCH ?= -march=core2
+release : CFLAGS += -D NDEBUG
+release : ${TARGET}
 
 $(TARGET): ${OBJS}
 	$(CC) $(CFLAGS) -o $@ $^ $(LINK) $(LIB)
