--- a/src/test/c/Makefile
+++ b/src/test/c/Makefile
@@ -1,4 +1,7 @@
-SRC_SRCS = test_riscv_table_reader.c
+CC = gcc
+ARCH ?= -march=core2
+
+SRC_SRCS = $(shell ls *.c)
 SRC_OBJS = $(SRC_SRCS:.c=.o)
 
 HDR_SRCS = $(shell ls *.h)
@@ -6,45 +9,34 @@ HDR_SRCS = $(shell ls *.h)
 SRCS = $(SRC_SRCS) $(TEST_SRCS)
 OBJS = $(SRC_OBJS) $(TEST_OBJS)
 
-OPT ?= -O3
-
-CFLAGS = -g $(OPT) -Wall -fPIC $(INCLUDE) -std=c11
-CXXFLAGS = -g $(OPT) -Wall -fPIC $(INCLUDE) -std=c++14
+CFLAGS = -g $(OPT) -Wall -fPIC $(INCLUDE) -std=c11 $(ARCH)
 TARGET = test_riscv_table_reader
 LINK = -L${COMPSTOR}/lib
 LIB = -lriscv
 
-ifdef DEBUG
-	OPT=-O0
-	CFLAGS+= -D DEBUG
-	CXXFLAGS+= -D DEBUG
-else
-	CFLAGS+= -D NDEBUG
-	CXXFLAGS+= -D NDEBUG
-endif
+all : OPT ?= -O2
+all : MODE = all
+all : $(TARGET)
 
-ifdef RISCV32
-	CC = riscv64-unknown-elf-gcc
-	CXX = riscv64-unknown-elf-g++
-	AR = riscv64-unknown-elf-ar
-	AS = riscv64-unknown-elf-as
+debug : OPT ?= -Og
+debug : CPPFLAGS+= -D DEBUG
+debug : MODE = DEBUG
+debug : $(TARGET)
 
-	CFLAGS += -march=rv32i -mabi=ilp32
-	CPPFLAGS += -march=rv32i -mabi=ilp32
-else
-	CFLAGS += -march=native
-	CPPFLAGS += -march=native
-endif
+release : OPT ?= -O3
+release : CPPFLAGS+= -D NDEBUG
+release : MODE = release
+release : $(TARGET)
 
 $(TARGET): ${OBJS} riscv_table_reader
 	$(CC) $(CFLAGS) -o $@ ${OBJS} $(LINK) $(LIB)
 
 .phony: riscv_table_reader
 riscv_table_reader:
-	${MAKE} -C ../../main/c/
+	${MAKE} -C ../../main/c $(MODE)
 
 .phony: clean
 clean:
-	${MAKE} -C ../../main/c/ clean
+	${MAKE} -C ../../main/c clean
 	rm -rf $(TARGET) $(OBJS)
 
